# kritis3m_tls_linux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  WolfSSL.cmake  keylog.txt  kritis3m_node_configuration.json  kritis3m_tls-completion.bash  liboqs.cmake
certs/: ecc2_root_cert.pem  ecc2_server_cert_chain.pem  ecc2_server_private.pem
config/: primary.json
config/crypto/identity/management_service/: cert.pem  privateKey.pem
config/wolfssl/: user_settings.h
includes/: certificate_handling.h  certificates.h  cli_parsing.h  wolfssl.h
scripts/: kritis3m_proxy-completion.bash  kritis3m_tls-completion.bash  network_tester.sh  network_tester_proxy.sh  network_tester_tls.sh  tls_client.sh  tls_echo_client.sh  tls_echo_server.ps1  tls_echo_server.sh  tls_echo_server_proxy.sh  tls_echo_server_smartcard.ps1  tls_echo_server_smartcard.sh  tls_forward_proxy.ps1  tls_forward_proxy.sh  tls_forward_proxy_smartcard.ps1  tls_forward_proxy_smartcard.sh  tls_reverse_proxy.ps1  tls_reverse_proxy.sh  tls_reverse_proxy_smartcard.ps1  tls_reverse_proxy_smartcard.sh
sources/: certificate_handling.c  main.c  tls_client.c  wolfssl.c
src/: cli_parsing.c  main.c  qkd_management.c
test_node1/: kritis3m_node_configuration.json
test_node1/config/: primary.json
test_node2/: kritis3m_node_configuration.json
test_node2/config/: primary.json
test_node2/crypto/identity/management_service/: chain.pem
